--- a/public/partials/episode.html
+++ b/public/partials/episode.html
@@ -27,7 +27,7 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a ng-show="profile" href="#/profile/{{user._id}}"><span class="glyphicon glyphicon-user"></span> {{user.local.email}}</a></li>
+                        <li><a ng-show="profile" href="#/profile_comments/{{user._id}}"><span class="glyphicon glyphicon-user"></span> {{user.local.email}}</a></li>
 
                         <li><a ng-click="logout()" href="javascript:;" ng-show="profile"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
@@ -108,7 +108,7 @@
 
                     <div>{{parentcomment.text}}</div>
                     <h6>{{parentcomment.post_time | date:'medium'}}</h6>
-                    <a href="#/profile/{{parentcomment.poster_id}}"><h6><i>{{user && parentcomment.poster_id == user._id ? "Me" : parentcomment.poster_name}}</i></h6></a>
+                    <a href="#/profile_comments/{{parentcomment.poster_id}}"><h6><i>{{user && parentcomment.poster_id == user._id ? "Me" : parentcomment.poster_name}}</i></h6></a>
 
                     <!-- reply to parent comment button -->
                     <button ng-click="clickReply($index)" class="btn btn-primary btn-sm" ng-show="profile">Reply</button>
@@ -138,7 +138,7 @@
                     <div class="media-body media-middle">
                         {{childcomment.text}}
                         <h6>{{childcomment.post_time | date:'medium'}}</h6>
-                        <a href="#/profile/{{childcomment.poster_id}}"><h6><i>{{user && childcomment.poster_id == user._id ? "Me" : childcomment.poster_name}}</i></h6></a>
+                        <a href="#/profile_comments/{{childcomment.poster_id}}"><h6><i>{{user && childcomment.poster_id == user._id ? "Me" : childcomment.poster_name}}</i></h6></a>
                     </div>
                 </div>
 
