Adding episode and season number info

--- a/public/partials/episode.html
+++ b/public/partials/episode.html
@@ -55,6 +55,7 @@
 
     <div class="col-sm-8">
         <h1>{{episode.name}}</h1>
+        <h4>Season {{episode.season_number}}, Episode {{episode.episode_number}}</h4>
         {{episode.summary}}
         <hr>
         <b>Air Date: </b> {{episode.air_date | date:'medium'}}
