Profile user email heading fix

--- a/public/partials/profile_comments.html
+++ b/public/partials/profile_comments.html
@@ -45,7 +45,7 @@
 <div class="body-below-nav">
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-        <h2 class="display-inline-block">{{user.local.email}}</h2>
+        <h2 class="display-inline-block">{{userProfile.local.email}}</h2>
         <h4 class="display-inline-block">({{numberUpvotes}})</h4>
 
         <!-- PROFILE INFORMATION -->
