--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -149,3 +149,12 @@ i {
     margin-top: 0px;
   }
 }
+
+.profile-comment-date {
+  margin-bottom: 0px;
+}
+
+.profile-comment-bottomline {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
